# re-discord

./: .gitignore  README.md  dune-project  package.json
.ci/: esy-build-steps.yml
esy.lock/: index.json
executable/: Greeter.re  PingBot.re  ReDiscordApp.re  VoiceBot.re  dune
tests/: ApiTest.re  RunTests.re  TestFramework.re  dune
